[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/insectia.png" type="Texture" id=1]
[ext_resource path="res://theme_test.tres" type="Theme" id=2]
[ext_resource path="res://Insectia.gd" type="Script" id=3]
[ext_resource path="res://flash_shader.shader" type="Shader" id=4]
[ext_resource path="res://EnemyLookDirection.tscn" type="PackedScene" id=5]

[sub_resource type="ShaderMaterial" id=12]
shader = ExtResource( 4 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.844, 13.7002 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=9]
radius = 66.3081

[sub_resource type="Animation" id=11]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "damage_flash"
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.568627, 0.243137, 0.243137, 1 )

[node name="Insectia" type="KinematicBody2D" groups=["enemy"]]
material = SubResource( 12 )
collision_layer = 7
collision_mask = 7
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.19454, -1.41897 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
use_parent_material = true
frames = SubResource( 1 )
playing = true

[node name="AggroArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroArea"]
shape = SubResource( 9 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 11 )
anims/damage_flash = SubResource( 13 )

[node name="EnemyLookDirection" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 7, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
theme = ExtResource( 2 )

[node name="Health" type="ProgressBar" parent="CanvasLayer/CenterContainer"]
margin_left = 56.0
margin_top = 2.0
margin_right = 456.0
margin_bottom = 12.0
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 2 )
custom_styles/fg = SubResource( 14 )
value = 50.0
percent_visible = false

[connection signal="body_entered" from="AggroArea" to="." method="_on_AggroArea_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
